# filesha-rs

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-05-18-232211_create_users/: up.sql
migrations/2020-06-14-011803_create_shares/: down.sql  up.sql
src/: api_error.rs  api_schemas.rs  guards.rs  main.rs  models.rs  passwords.rs  schema.rs  utils.rs
src/db/: file.rs  user.rs
src/models/: common_models.rs  file.rs  user.rs
src/routes/: file.rs  user.rs
